# rtsp_server_template

./: CMakeLists.txt  CMakePresets.json  CustomMediaFactory.h  Dockerfile  GstColorBarsVideoSrc.c  GstColorBarsVideoSrc.cpp  GstColorBarsVideoSrc.h  GstCustomVideoSrc.cpp  GstCustomVideoSrc.h  README.md  gst-color-bars.cpp  gst-color-bars.h  main-gstream copy.cpp  main-gstream.cpp  main-opencv.cpp  main-x264.cpp  picture_gen.cpp  picture_gen.h  stdafx.h  testH264VideoStreamer.cpp  vcpkg.json
.github/workflows/: build.yml
cmake/: FindGStreamer.cmake  FindGstRtspServer.cmake  FindIir1.cmake  FindLiquidDsp.cmake  FindSiglib.cmake
cmake/ports/live555/: portfile.cmake
scripts/: ffmpeg_client.sh  ffplay.txt  mplayer.txt  vlc-stream.sh  vlc.txt
src/: CMakeLists.txt
src/lib_rtsp_streamer/: CMakeLists.txt
src/lib_rtsp_streamer/include/rtsp_streamer/: RtspStreamer.h
src/lib_rtsp_streamer/src/: CustomMediaFactory.cpp  CustomMediaFactory.h  GstCustomVideoSrc.cpp  GstCustomVideoSrc.h  RtspStreamer.cpp  stdafx.h
src/simple_example/: CMakeLists.txt  main.cpp  stdafx.h
src/test_streamer/: CMakeLists.txt  frame_generator.cpp  frame_generator.h  main-gstream.cpp  picture_gen.cpp  picture_gen.h  simple_frame_gen.h  stdafx.h
